# tessara

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  ORPHEUM.md  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
crates/tessara-api/: Cargo.toml
crates/tessara-api/migrations/: 001_baseline.sql  001_bootstrap.sql  002_builder_hardening.sql  002_dataset_query_designer.sql  003_choice_list_import_keys.sql  003_submission_fact_metadata.sql  004_dataset_layer.sql  005_report_dataset_binding.sql  006_report_computed_fields.sql  007_aggregation_layer.sql  008_chart_aggregation_binding.sql  009_dataset_composition_mode.sql  010_aggregation_metric_kinds.sql  011_role_access.sql  012_account_status.sql  013_account_delegations.sql  014_node_type_labels.sql  015_form_version_semver.sql  016_form_version_legacy_label_backfill.sql  017_workflow_runtime.sql  018_auth_session_hardening.sql  019_form_section_builder_metadata.sql  020_workflow_multistep.sql  021_dashboard_descriptions.sql  022_form_field_layout.sql  023_static_text_field_type.sql  024_workflow_scope_node_type.sql  025_dto_cleanup.sql  026_workflow_available_nodes.sql
crates/tessara-api/src/: analytics.rs  app_summary.rs  auth.rs  components.rs  config.rs  dashboards.rs  datasets.rs  db.rs  demo.rs  error.rs  forms.rs  hierarchy.rs  legacy_import.rs  lib.rs  main.rs  operations.rs  reporting.rs  submissions.rs  users.rs  workflows.rs
crates/tessara-api/src/auth/: dto.rs  extractor.rs  handlers.rs  mod.rs  repo.rs  service.rs
crates/tessara-api/src/components/: dto.rs  mod.rs
crates/tessara-api/src/dashboards/: dto.rs  mod.rs
crates/tessara-api/src/datasets/: dto.rs  mod.rs  restriction_tiers.rs
crates/tessara-api/src/demo/: accounts.rs  analytics.rs  forms.rs  hierarchy.rs  responses.rs  workflows.rs
crates/tessara-api/src/forms/: dto.rs  mod.rs
crates/tessara-api/src/hierarchy/: dto.rs  mod.rs
crates/tessara-api/src/submissions/: dto.rs  handlers.rs  mod.rs  repo.rs  service.rs
crates/tessara-api/src/users/: dto.rs  mod.rs
crates/tessara-api/src/workflows/: dto.rs  generated.rs  handlers.rs  mod.rs  repo.rs  runtime.rs  service.rs
crates/tessara-api/tests/: demo_flow.rs  workflow_runtime.rs
crates/tessara-api/tests/support/: datasets.rs  mod.rs
crates/tessara-api/tests/workflow_runtime/: auth_sessions.rs  permissions.rs  response_lifecycle.rs  workflow_assignments.rs  workflow_authoring_runtime.rs
crates/tessara-web/: Cargo.toml
crates/tessara-web/assets/: app.css  base.css
crates/tessara-web/public/bridge/: admin-legacy.js  app-legacy.js
crates/tessara-web/src/: app.rs  app_script.rs  application.rs  brand.rs  document.rs  http.rs  lib.rs  main.rs  pipeline.rs  shell.rs  shell_model.rs  shell_script.rs  shell_style.rs  theme.rs
crates/tessara-web/src/api/: client.rs  endpoints.rs  error.rs  mod.rs
crates/tessara-web/src/app/: mod.rs  transitional.rs
crates/tessara-web/src/document/: assets.rs  html.rs  mod.rs  theme_bootstrap.rs
crates/tessara-web/src/features/: administration.rs  components.rs  core.rs  dashboards.rs  datasets.rs  forms.rs  home.rs  migration.rs  mod.rs  native.rs  native_runtime.rs  native_shell.rs  organization.rs  reporting.rs  reset.rs  responses.rs  shared_data.rs  workflows.rs
crates/tessara-web/src/features/administration/: api.rs  display.rs  graph.rs  mod.rs  models.rs  node_types.rs  nodes.rs  pages.rs  roles.rs  state.rs  types.rs  users.rs
crates/tessara-web/src/features/auth/: api.rs  components.rs  guards.rs  mod.rs  types.rs
crates/tessara-web/src/features/components/: mod.rs  pages.rs
crates/tessara-web/src/features/core/: pages.rs
crates/tessara-web/src/features/dashboards/: mod.rs  pages.rs
crates/tessara-web/src/features/datasets/: actions.rs  api.rs  display.rs  expressions.rs  loaders.rs  mod.rs  pages.rs  payloads.rs  permissions.rs  related.rs  tables.rs  types.rs  validation.rs
crates/tessara-web/src/features/form_builder/: canvas.rs  drag.rs  layout.rs  mod.rs  state.rs  types.rs
crates/tessara-web/src/features/forms/: api.rs  attached_nodes.rs  create.rs  detail.rs  detail_content.rs  display.rs  edit.rs  edit_form.rs  editor_sections.rs  filtering.rs  list.rs  loaders.rs  mod.rs  options_loader.rs  pages.rs  save.rs  tables.rs  types.rs  (+2 more)
crates/tessara-web/src/infra/: http.rs  routing.rs
crates/tessara-web/src/routes/: administration.rs  components.rs  dashboards.rs  datasets.rs  forms.rs  home.rs  login.rs  mod.rs  not_found.rs  operations.rs  organization.rs  responses.rs  workflows.rs
crates/tessara-web/src/state/: mod.rs  navigation.rs  session.rs  theme.rs
crates/tessara-web/src/types/: ids.rs  mod.rs  pagination.rs  route_params.rs
crates/tessara-web/src/ui/: breadcrumb.rs  button.rs  combobox.rs  components.rs  data_table.rs  draggable_panel_list.rs  dropdown.rs  empty_state.rs  info_list.rs  mod.rs  page_header.rs  segmented_toggle.rs  sheet.rs  status_badge.rs  table_filter.rs  table_pagination.rs  tabs.rs  timestamp.rs
crates/tessara-web/src/utils/: filtering.rs  format.rs  metadata.rs  mod.rs  pagination.rs  slug.rs  text.rs  url.rs
(+546 files in other folders)
