[workspace]
members = [
    "crates/tessara-analytics",
    "crates/tessara-api",
    "crates/tessara-auth",
    "crates/tessara-core",
    "crates/tessara-dashboards",
    "crates/tessara-db",
    "crates/tessara-forms",
    "crates/tessara-hierarchy",
    "crates/tessara-jobs",
    "crates/tessara-reporting",
    "crates/tessara-submissions",
    "crates/tessara-web",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
arrow = "56"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
datafusion = "50"
leptos = { version = "0.8.17", default-features = false, features = ["ssr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
