[package]
name = "tessara-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tessara-web = { path = "../tessara-web" }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
