[package]
name = "tessara-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[dependencies]
any_spawner = { version = "0.3", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1"
gloo-net = { workspace = true }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tessara-ui = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
